--- a/styles.css
+++ b/styles.css
@@ -11,3 +11,17 @@ body {
 	background: white;
 	margin: auto;
 }
+.postcard-header {
+	display: flex;
+}
+.postcard-header img {
+	width: 50px;
+	height: 50px;
+}
+.postcard-header h1 {
+	width: 100%;
+	margin: 0;
+}
+.postcard-body {
+	display: flex;
+}
