--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-* {
-	border: 1px dashed red;
-	min-height: 10px;
-}
 body {
 	background: black;
 }
@@ -13,6 +9,7 @@ body {
 }
 .postcard-header {
 	display: flex;
+	padding: 10px;
 }
 .postcard-header img {
 	width: 50px;
@@ -21,7 +18,27 @@ body {
 .postcard-header h1 {
 	width: 100%;
 	margin: 0;
+	padding-top: 10px;
 }
 .postcard-body {
 	display: flex;
+}
+.body-left p:first-child {
+	margin-top: 0;
+}
+.body-left,
+.body-right {
+	padding: 10px;
+}
+input {
+	border: none;
+	border-bottom: 1px grey solid;
+}
+.postcard-footer {
+	text-align: center;
+}
+button {
+	background-color: dimgray;
+	padding: 5px 10px;
+	border: none;
 }
